@@ -1,0 +1,7 @@
+# -*- Makefile -*- Time-stamp: <05/05/16 22:07:32 ptr>
+
+LIBNAME = cxa
+MAJOR = 0
+MINOR = 0
+PATCH = 1
+SRC_C = ../../../src/cxa.c
