@@ -1,0 +1,14 @@
+# -*- Makefile -*- Time-stamp: <03/10/12 20:35:49 ptr>
+# $Id$
+
+SRCROOT := ../..
+COMPILER_NAME := gcc
+
+include Makefile.inc
+include ${SRCROOT}/Makefiles/top.mak
+
+INCLUDES += -I$(STLPORT_INCLUDE_DIR)
+
+ifeq ($(OSNAME),linux)
+DEFS += -D_GNU_SOURCE
+endif
